--- a/compose.yaml
+++ b/compose.yaml
@@ -8,42 +8,58 @@
 # database or a cache. For examples, see the Awesome Compose repository:
 # https://github.com/docker/awesome-compose
 services:
+  # Development service - default
   server:
     build:
       context: .
+      target: dev
     ports:
-      - 8000:80
+      - "${APP_PORT:-8000}:8000"
+    volumes:
+      # Mount source for development
+      - ./:/var/www/project
+      - ./vendor:/var/www/project/vendor
+    environment:
+      - APP_ENV=dev
+      - DATABASE_URL=${DATABASE_URL:-postgresql://app:!ChangeMe!@database:5432/app?serverVersion=16&charset=utf8}
+    depends_on:
+      database:
+        condition: service_healthy
+  
+  # Production service - use with "docker compose --profile prod up"
+  server-prod:
+    profiles:
+      - prod
+    build:
+      context: .
+      target: prod
+    ports:
+      - "${APP_PORT:-80}:80"
+    environment:
+      - APP_ENV=prod
+      - DATABASE_URL=${DATABASE_URL:-postgresql://app:!ChangeMe!@database:5432/app?serverVersion=16&charset=utf8}
+    depends_on:
+      database:
+        condition: service_healthy
 
-# The commented out section below is an example of how to define a PostgreSQL
-# database that your application can use. `depends_on` tells Docker Compose to
-# start the database before your application. The `db-data` volume persists the
-# database data between container restarts. The `db-password` secret is used
-# to set the database password. You must create `db/password.txt` and add
-# a password of your choosing to it before running `docker-compose up`.
-#     depends_on:
-#       db:
-#         condition: service_healthy
-#   db:
-#     image: postgres
-#     restart: always
-#     user: postgres
-#     secrets:
-#       - db-password
-#     volumes:
-#       - db-data:/var/lib/postgresql/data
-#     environment:
-#       - POSTGRES_DB=example
-#       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
-#     expose:
-#       - 5432
-#     healthcheck:
-#       test: [ "CMD", "pg_isready" ]
-#       interval: 10s
-#       timeout: 5s
-#       retries: 5
-# volumes:
-#   db-data:
-# secrets:
-#   db-password:
-#     file: db/password.txt
+  # PostgreSQL Database
+  database:
+    image: postgres:16
+    restart: always
+    environment:
+      - POSTGRES_DB=app
+      - POSTGRES_USER=app
+      - POSTGRES_PASSWORD=!ChangeMe!
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "app"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  postgres_data:
 
